css/style.css
/* ... */
/*---------------------------------------------
Testimonials Section ** Used for Prtnrs + Prods
---------------------------------------------*/
#testimonials {
  /*padding: 100px 0px;*/
	position: relative;
	z-index: 9;
	color: #101010;
	padding-top: 5rem;
	padding-bottom: 5rem;
}

#testimonials h1 {
	color: #2a5489;
	text-align: center;
}

#testimonials hr {
	border: 2px solid #66ccff;
	border-radius: 3px;
	width: 10%;
}

.quoteBox {
  border-radius: 5px;
  padding: 60px 30px;
  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
}

.quoteBox img {
  z-index: 10;
  position: relative;
  max-width: 100%;
}
/* -------------------------------------- Benefits Page Styles -------------------------------------- */
/* --------------------------------------
	You and Your Client Grid 
-------------------------------------- */
#benefitsGrid {
	padding-top: 5rem;
	padding-bottom: 5rem;
}

#benefitsGrid .section-title,
.grid-big { 
	text-align: center;
}

.dark-col {
	background: #999;
}

.grid-small {
	display: none;
}

@media(max-width: 980px) {
	
	#benefitsGrid h3 { 
		text-align: center;
	}
	
	.grid-big {
		display: none;
	}
	
	.grid-small {
		display: inline;
	}
	
}

/* -------------------------------------- About Us Page Styles -------------------------------------- */

#story h1,
#mission h1,
#founders h1 { 
	text-align: center;
}

#story p,
#founders p { 
	font-size: 18px;
	color: #101010;
	line-height: 27px;
	padding-bottom: 10px;
	font-weight: 600;
}

#story hr,
#mission hr,
#founders hr {
	border: 2px solid #101010;
	border-radius: 3px;
	width:20%;
}

.colBlock {
	background: #ffffff;
}

/* --------------------------------------
	Story Section
-------------------------------------- */

.signature {
	max-height: 100px;
	max-width: 400px;
}

#story {
	padding-top: 10rem;
	padding-bottom: 5rem;
}

#story h1 {
	color: #101010;
}

/**** Story Demo ****/
.flexy {
	display: flex;
	flex-direction: column;
	justify-content: center;
}

#story2 h1 {
	font-size: 1.75rem;
	margin: 0 0 0.75rem 0;
}

/* Pattern styles */
#story2 .container {
	display: flex;
}

#story2 .left-half {
	flex: 5;
	background: url('../images/teambreak.jpg') 50% 0 repeat-y fixed;
	background-position: center center;'
	padding-top: 20rem;
	padding-bottom: 5rem;
}

#story2 .right-half {
	background-color: #fffffe;
	flex: 7;
}

/* --------------------------------------
	Mission Section
-------------------------------------- */
#mission {
	background: url('../images/hands_in.jpg') 50% 0 repeat-y fixed;
	background-position: center center;
	padding-top: 5rem;
	padding-bottom: 5rem;
}

#mission h1 {
	color: #101010;
}

#mission p {
	color: #101010;
}

#mission h2 {
	color: #101010;
	text-align: center; 
	font-size: 28px;
}

#pull-quote {
	text-align: center;
	color: #101010;
}

#quoteIcon {
	font-size: 25px;
	margin-left: 5px;
	margin-right: 5px;
}

/* --------------------------------------
	Founders Section
-------------------------------------- */
#founders {
	background: #e8e8e8;
	padding-top: 5rem;
	padding-bottom: 5rem;
}

#founders h1 {
	color: #101010;
	text-align: center;
}

.card {
  /* Add shadows to create the "card" effect */
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
}

/* On mouse-over, add a deeper shadow */
.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
}

/* Add some padding inside the card container */
.cardBlock {
	background: #ffffff;
	padding: 2px 16px;
}

.social-icon:hover {
	color: #66ccff;
}

/*--------------------------------------- Responsive Styles -----------------------------------------*/
@media (min-width: 2200px) {
	p { 
		font-size: 20px
	}
}


@media (max-width: 980px) {

	
	.quoteBox,
	.card,
	.ptnrBox {
		margin-bottom: 45px;
	}
	
	login-btn {
		margin-left: 10px;
	}

	/*.custom-navbar .nav li a {
		font-size: 14px;
		line-height: 20px;
	}*/

	#intro, #pulsHero {
		height: 65vh; 
	}

	/*#video iframe {
		margin-top: 42px;
	}*/

  #contact .contact_detail {
  background: #ffffff;
  padding: 10rem 3rem 10rem 5rem;
}

}

@media (max-width: 768px) {

  .custom-navbar .navbar-brand {
    line-height: 20px;
  }

  #overview img,
  #products .col-md-4 {
    padding-top: 32px;
  }

  .nav-tabs > li > a {
    font-size: 13px;
  }
	
	.about-working-hours {
      border-left: 0;
      padding: 22px 0 0 0;
	}

}

@media (max-width: 760px) {

  #intro, #pulsHero {
    height: 100vh;
  }
	
#plsFtrs img {
	max-height: 800px;
	max-width: 300px;
}

}

